# 01-Stu/03-FrontEnd/03-Vue_2_3/04-Vue_3-Mst/01-StudyProjectsPractical/syt-medical/server/openAPI/data/swagger-output.json
@@ -647,6 +647,30 @@
         }
       }
     },
+    "/api/user/msm/send": {
+      "post": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "phone": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/user/msm/send/{phone}": {
       "get": {
         "description": "",
